Inserindo links no menu

--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <title>DEVARIA</title>
 </head>
 <body>
-    <header>
-
-    </header>
+     <header>
+        <h1>Primera pagina Web na Devaria</h1>
+        <nav>
+            <ul>
+               <li><a href="index.html">Home</a></li>  
+               <li> <a href="professores.html">Professor</a></li>
+               <li> <a href="faleConosco.html">Fale Conosco</a></li>
+            </ul>  
+         </nav>
+      </header>
     <main>
 
     </main>
