--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                <li><a href="index.html">Home</a></li>  
-               <li> <a href="professores.html">Professor</a></li>
+               <li> <a href="professores.html">Professores</a></li>
                <li> <a href="faleConosco.html">Fale Conosco</a></li>
             </ul>  
          </nav>
