--- a/faleConosco.html
+++ b/faleConosco.html
@@ -33,7 +33,7 @@
                 <textarea name="comentario" cols="50" rows="4"></textarea>
             </p>
             <p>
-                <label">Sexo:</label>
+                <label>Sexo:</label>
                 <input type="radio" name="sexo"><label>Feminino</label>
                 <input type="radio" name="sexo"><label>Masculino</label>
             </p>
