--- a/faleConosco.html
+++ b/faleConosco.html
@@ -16,6 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li> <a href="professores.html">Professores</a></li>
                 <li> <a href="faleConosco.html">Fale Conosco</a></li>
+                <li> <a href="DevStars.html">DevStars</a></li>
             </ul>
         </nav>
     </header>
