--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A Devaria é uma formação gratuita de desenvolvedores sem experiência."/>
+    <meta name="keywords" content="Devaria, programação, desevolvimento de sistemas, tecnologia, informatica"/>
+    <meta name="author" content="Sergio  Luiz Sinhoca"/>
+    <meta http-equiv="Refresh" content="300"/>
     <title>DEVARIA</title>
 </head>
 <body>
@@ -13,13 +17,27 @@
                <li><a href="index.html">Home</a></li>  
                <li> <a href="professores.html">Professores</a></li>
                <li> <a href="faleConosco.html">Fale Conosco</a></li>
+               <li> <a href="DevStars.html">DevStars</a></li>
             </ul>  
          </nav>
       </header>
     <main>
         <section>
-            <img src="fotos/fotohome.png" width="500" alt="Ola Mundo">
+            <figure>
+                <img src="fotos/fotohome.png" width="500" alt="Ola Mundo">
+                <figcaption>Foto de capa Devaria</figcaption>
+            </figure>
         </section>
+        <section>
+            <div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZEqYpFQZHsw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
+        <!---
+        <video width="320" height="240" controls="controls">
+            <source src="videos/anuncio.mp4" type="video/mp4">
+        </video>
+        --->
     </main>
     <footer>
         <section>
